--- a/src/example.html
+++ b/src/example.html
@@ -5,14 +5,17 @@
 <title>Formula Demonstration</title>
 <link rel="stylesheet" href="seshet-core.css" />
 <link rel="stylesheet" href="seshet-operators.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+<link rel="stylesheet" href="seshet-buttons.css" />
+<script src="jquery.min.js"></script>
 <script type="text/javascript" src="seshet-core.js"></script>
 <script type="text/javascript" src="seshet-operators.js"></script>
+<script type="text/javascript" src="seshet-buttons.js"></script>
 </head>
 
 <script type="text/javascript">
 function onLoad(){
     m = new seshet.InputLine($('#seshet-input-container'),$('#seshet-target'));
+    m = new seshet.ButtonBox($('#seshet-button-container'),$('#seshet-target'));
 }
 </script>
 <body onload="onLoad()">
@@ -20,13 +23,8 @@ function onLoad(){
   
 </div>
 <div>
-  <input type="button" onclick="seshet.insertOperatorAtCursor(seshet.operators.Fraction);" value="½"/>
-  <input type="button" onclick="seshet.insertOperatorAtCursor(seshet.operators.Sqrt);" value="√¯"/>
-  <input type="button" onclick="seshet.insertOperatorAtCursor(seshet.operators.Paren);" value="()"/>
-  <input type="button" onclick="seshet.insertOperatorAtCursor(seshet.operators.Exponent);" value="a¹"/>
+<input id="seshet-target" type="text" value="( sqrt(x))/(2)"/>
 </div>
-<div>
-<input id="seshet-target" type="text" value=" sqrt(( sqrt(( sqrt(( sqrt(( sqrt(( sqrt(( sqrt(( sqrt(( sqrt(( sqrt())/()))/()))/()))/()))/()))/()))/()))/()))/())"/>
-</div>
+<div id="seshet-button-container"></div>
 </body>
 </html>
