Update handling of unrecognized strings, laying groundwork for math.js integration.

--- a/src/example.html
+++ b/src/example.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
 <meta charset="utf-8" />
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="seshet-operators.css" />
 <link rel="stylesheet" href="seshet-buttons.css" />
 <script src="jquery.min.js"></script>
+<script src="math.js"></script>
 <script type="text/javascript" src="seshet-core.js"></script>
 <script type="text/javascript" src="seshet-operators.js"></script>
 <script type="text/javascript" src="seshet-buttons.js"></script>
