Changing default equation in the index.html example

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ function onLoad(){
   
 </div>
 <div>
-<input id="seshet-target" type="text" value="a^(b)_(c) ( nthrt(2)(x))/(2)"/>
+<input id="seshet-target" type="text" value=" sqrt((2 abs((1)/(2)))/( nthrt(3)(4)))"/>
 </div>
 <div id="seshet-button-container"></div>
 </body>
